/***********************************************************************
X3 ChangeLog

2010-07-03  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Removed extra 'is' from CSMSG_SMURF_TARGET.

2010-06-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for crash on BURST (B) message for a channel
	with +L, at least one ban or except, and no users.

2010-05-21  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/modcmd.c: Added support for fall back replacements in
	command bindings. For example if you specify $1n instead of $1,
	then the users nick will be used if param 1 is not supplied.

2010-05-14  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for NickServ NICKINFO using the wrong
	lastseen timestamp.

2010-05-13  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fixed support for channel mode +a (Admins only).

2010-05-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* tools/db.php: Rewrote parser function as a class and faster
	parsing.

2010-05-11  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added nick expiration support.

	* src/nickserv.h: Added nick expiration support.

	* x3.conf.example: Added nick expiration support.

2010-05-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added SET action for SEARCH.

	* src/nickserv.help: Added SET action for SEARCH.

2010-05-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added NickServ search title criteria.

	* src/nickserv.help: Added NickServ search title criteria.

2010-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Minor typo in previous commit where returning 0
	when it should have been 1 from opserv_join_check().

2010-04-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.c: Fix for possible bug in opserv_join_check().

2010-04-23  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/log.c: Modified X3.last to only show host and ident to
	opers.

2010-03-15  Matthew Beeching  <jobe@mdbnet.co.uk>
